<resources>
    <string name="app_name">IHM</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- General -->
    <string name="titulo_general">General</string>
    <string name="separador">__________________</string>
    <string name="general_Temperatura">Temperatura</string>
    <string name="general_Humedad">Humedad</string>
    <string name="estado_planta">Dispositivos Bluetooth</string>
    <!-- Estado Planta -->
    <string name="titulo_estado">Estado de la Planta</string>
    <string name="unidad_Temperatura">°C</string>
    <string name="unidad_Humedad">g/m3</string>
    <!-- Configuraciones -->
    <string name="titulo_configuraciones">Configuraciones</string>
    <string name="instrucciones_configuraciones">Indique las configuraciones del invernadero</string>
    <!-- Agregar Plantas -->
    <string name="titulo_agregar_planta">Agregar Planta</string>
</resources>